tests/ui/abi/unsupported.x64.stderr
error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:36:8
   |
LL | extern "ptx-kernel" fn ptx() {}
   |        ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:38:22
   |
LL | fn ptx_ptr(f: extern "ptx-kernel" fn()) {
   |                      ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:42:8
   |
LL | extern "ptx-kernel" {}
   |        ^^^^^^^^^^^^

error[E0570]: "gpu-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:44:8
   |
LL | extern "gpu-kernel" fn gpu() {}
   |        ^^^^^^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:47:8
   |
LL | extern "aapcs" fn aapcs() {}
   |        ^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:49:24
   |
LL | fn aapcs_ptr(f: extern "aapcs" fn()) {
   |                        ^^^^^^^

error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:53:8
   |
LL | extern "aapcs" {}
   |        ^^^^^^^

error[E0570]: "msp430-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:56:8
   |
LL | extern "msp430-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0570]: "avr-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:59:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-m" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:62:8
   |
LL | extern "riscv-interrupt-m" {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:68:8
   |
LL | extern "thiscall" fn thiscall() {}
   |        ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:70:27
   |
LL | fn thiscall_ptr(f: extern "thiscall" fn()) {
   |                           ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:74:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:77:8
   |
LL | extern "stdcall" fn stdcall() {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:81:26
   |
LL | fn stdcall_ptr(f: extern "stdcall" fn()) {
   |                          ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:87:8
   |
LL | extern "stdcall" {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:91:8
   |
LL | extern "stdcall-unwind" {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: if you need `extern "stdcall-unwind"` on win32 and `extern "C-unwind"` everywhere else, use `extern "system-unwind"`

error[E0570]: "C-cmse-nonsecure-call" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:120:28
   |
LL | fn cmse_call_ptr(f: extern "C-cmse-nonsecure-call" fn()) {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "C-cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:125:8
   |
LL | extern "C-cmse-nonsecure-entry" fn cmse_entry() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "C-cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:127:29
   |
LL | fn cmse_entry_ptr(f: extern "C-cmse-nonsecure-entry" fn()) {
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "C-cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:131:8
   |
LL | extern "C-cmse-nonsecure-entry" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:141:17
   |
LL |     ptr: extern "thiscall" fn(),
   |                 ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:146:16
   |
LL |     pub extern "thiscall" fn inherent_fn(self) {
   |                ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:153:12
   |
LL |     extern "thiscall" fn trait_fn(self);
   |            ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:158:12
   |
LL |     extern "thiscall" fn trait_fn(self) {
   |            ^^^^^^^^^^

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:99:17
   |
LL | fn cdecl_ptr(f: extern "cdecl" fn()) {
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:104:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

warning: "cdecl-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:107:1
   |
LL | extern "cdecl-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C-unwind"` instead

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:96:1
   |
LL | extern "cdecl" fn cdecl() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

error: aborting due to 25 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0570`.
